--- a/servicios.html
+++ b/servicios.html
@@ -3,30 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TAMAKO | Servicios y Tarifas</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>TAMAKU | Planes y Servicios</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
-        :root{ --gold:#bf953f; --gold-soft:#e6c87a; }
+                :root{
+            --gold:#ffd277;
+            --gold-soft:#e6c87a;
+        }
         *{margin:0;padding:0;box-sizing:border-box;}
         body{
-            min-height:100vh;
-            background:#050505;
-            font-family:'Montserrat',sans-serif;
-            color:white;
-            overflow-x:hidden;
-        }
+    margin:0;
+    font-family:'Inter',sans-serif;
+    background:
+    radial-gradient(circle at 70% 30%, rgba(255,190,60,0.25), transparent 40%),
+    radial-gradient(circle at 30% 70%, rgba(255,190,60,0.15), transparent 40%),
+    linear-gradient(180deg, #050505 0%, #0a0a0f 100%);
+    color:#ffffff;
+    overflow-x:hidden;
+    }
+
+    body::before{
+        content:"";
+        position:fixed;
+        inset:0;
+        background:
+            radial-gradient(circle at 50% 50%, rgba(191,149,63,0.12), transparent 55%);
+        z-index:-1;
+    }
+
+    body::after{
+        content:"";
+        position:fixed;
+        top:0;
+        left:-50%;
+        width:200%;
+        height:100%;
+        background:linear-gradient(
+            120deg,
+            transparent 40%,
+            rgba(191,149,63,0.05),
+            transparent 60%
+        );
+        animation: moveGlow 8s linear infinite;
+        pointer-events:none;
+        z-index:-1;
+    }
+
+    @keyframes moveGlow{
+        from{ transform:translateX(0); }
+        to{ transform:translateX(50%); }
+    }
 
         /* Fondo y marco */
-        .background{ position:fixed; inset:0; z-index:-3; background: radial-gradient(circle at center, rgba(191,149,63,.25), transparent 60%), repeating-linear-gradient(45deg, #0b0b0b 0px, #0b0b0b 2px, #050505 2px, #050505 4px); }
-        .frame{ position:fixed; inset:40px; border:1.5px solid rgba(191,149,63,.45); pointer-events:none; z-index: 10;}
-
+        .background{
+            position:fixed;
+            inset:0;
+            z-index:-3;
+            background:
+            radial-gradient(circle at 70% 30%, rgba(255,190,60,0.25), transparent 40%),
+            radial-gradient(circle at 30% 70%, rgba(255,190,60,0.15), transparent 40%),
+            linear-gradient(180deg, #050505 0%, #0a0a0f 100%);
+    }
         /* Navegación */
-        nav{ display:flex; justify-content:space-between; align-items:center; padding:50px 6%; position: relative; z-index: 20;}
-        .logo{ font-family:'Cinzel',serif; font-size:1.6rem; letter-spacing:6px; color:var(--gold); margin-top: 8px; }
-        .nav-links{ display:flex; align-items:center; gap:40px; }
-        .nav-links a{ padding:10px 24px; color:#e5e5e5; text-decoration:none; font-size:.8rem; letter-spacing:4px; text-transform:uppercase; transition:all .25s ease; }
-        .nav-links a:hover{ color:#fff !important; background:linear-gradient(90deg, rgba(191,149,63,.2), rgba(191,149,63,.55), rgba(191,149,63,.2)); }
+            nav{
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            padding:25px 8%;
+            position:sticky;
+            top:0;
+            background:rgba(0,0,0,0.85);
+            backdrop-filter:blur(20px);
+            z-index:1000;
+            border-bottom:1px solid rgba(191,149,63,0.2);
+        }
+        .nav-links{
+            display:flex;
+            gap:60px;
+            align-items:center;
+        }
 
+        .nav-links a{
+            padding:10px 24px;
+            color:#e5e5e5;
+            text-decoration:none;
+            font-size:.75rem;
+            letter-spacing:3px;
+            text-transform:uppercase;
+            transition:all .3s ease;
+        }
+
+        .nav-links a:hover{
+            color:#fff;
+            background:linear-gradient(
+                90deg,
+                rgba(191,149,63,.2),
+                rgba(191,149,63,.55),
+                rgba(191,149,63,.2)
+            );
+        }
+
+        .nav-links a.active{
+            color:var(--gold);
+        }
+        .logo{
+            font-family:'Playfair Display',serif;
+            font-size:1.5rem;
+            letter-spacing:6px;
+            color:var(--gold);
+        }
+
+        .btn-login{
+            border:1px solid var(--gold);
+            padding:8px 22px;
+            border-radius:8px;
+            transition:all .3s ease;
+        }
+
+        .btn-login:hover{
+            background:var(--gold);
+            color:#000 !important;
+        }
         /* Contenido de Servicios */
         .services-container {
             position: relative;
@@ -41,13 +138,14 @@
             width: 100%;
         }
 
-        .cinzel-title {
-            font-family: 'Cinzel', serif;
+            .cinzel-title {
+            font-family: 'Playfair Display', serif;
             font-size: clamp(2.5rem, 6vw, 4rem);
+            font-weight: 700;
             background: linear-gradient(#f5e7b2,#bf953f,#8c6a2d);
             -webkit-background-clip:text;
             -webkit-text-fill-color:transparent;
-            letter-spacing: 12px;
+            letter-spacing: 4px;
             margin-bottom: 10px;
         }
 
@@ -138,13 +236,12 @@
             100% { left: 120%; opacity: 0; }
         }
 
-        .price-card h2 { font-family: 'Cinzel', serif; font-size: 1.1rem; color: var(--gold); letter-spacing: 3px; margin-bottom: 15px; }
-        .price-card .price {
-            font-size: 2.8rem; /* Más grande y audaz */
-            font-weight: 700;
-            color: #fff;
-            margin: 15px 0 30px 0;
-            letter-spacing: -1px;
+            .price-card h2 { 
+            font-family: 'Playfair Display', serif; 
+            font-size: 1.1rem; 
+            color: var(--gold); 
+            letter-spacing: 3px; 
+            margin-bottom: 15px; 
         }
         .price-card .price span { font-size: 0.8rem; color: #666; letter-spacing: 1px; }
         .price-card ul { list-style: none; padding: 0; margin-bottom: 30px; flex-grow: 1; }
@@ -158,7 +255,7 @@
             border: 1px solid rgba(191, 149, 63, 0.4); /* Borde sutil */
             border-radius: 50px;
             color: rgba(255, 255, 255, 0.9);
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Inter', sans-serif;
             font-size: 0.75rem;
             font-weight: 600;
             letter-spacing: 2px;
@@ -183,13 +280,22 @@
         .btn-select:active {
             transform: translateY(-1px);
         }
-
-        .btn-select:hover { background: var(--gold); color: #000; border-color: var(--gold); box-shadow: 0 5px 15px rgba(191, 149, 63, 0.3); }
-
         .btn-volver {
-            margin-top: 40px; margin-bottom: 30px; padding: 12px 40px; background: transparent; border: 1px solid var(--gold);
-            color: var(--gold); font-family: 'Montserrat', sans-serif; text-transform: uppercase; letter-spacing: 3px;
-            font-size: 0.8rem; cursor: pointer; text-decoration: none; transition: all 0.4s ease; position: relative; z-index: 20;
+            margin-top: 40px;
+            margin-bottom: 30px;
+            padding: 12px 40px;
+            background: transparent;
+            border: 1px solid var(--gold);
+            color: var(--gold);
+            font-family: 'Inter', sans-serif;
+            font-size: 0.8rem;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            cursor: pointer;
+            text-decoration: none;
+            transition: all 0.4s ease;
+            position: relative;
+            z-index: 20;
         }
 
         .btn-volver:hover { background: var(--gold); color: #000; box-shadow: 0 0 20px rgba(191, 149, 63, 0.4); }
@@ -213,8 +319,14 @@
             background: #0a0a0a; border: 1px solid var(--gold); padding: 40px; width: 90%; max-width: 450px;
             position: relative; transform: translateY(30px); transition: transform 0.4s ease;
         }
+        .modal-content h2 {
+            font-family: 'Playfair Display', serif;
+            color: var(--gold);
+            margin-bottom: 20px;
+            font-size: 1.2rem;
+            letter-spacing: 3px;
+        }
         .modal-overlay.active .modal-content { transform: translateY(0); }
-        .modal-content h2 { font-family: 'Cinzel', serif; color: var(--gold); margin-bottom: 20px; font-size: 1.2rem; letter-spacing: 3px; }
         .modal-form { display: flex; flex-direction: column; gap: 15px; }
         .modal-form input { background: rgba(255,255,255,0.05); border: 1px solid rgba(191, 149, 63, 0.3); padding: 12px; color: white; outline: none; }
         .modal-form input:focus { border-color: var(--gold); }
@@ -226,15 +338,14 @@
         /* --- FOOTER --- */
         footer {
             height: 75px; background: rgba(5, 5, 5, 0.95); backdrop-filter: blur(15px); border-top: 1px solid rgba(191, 149, 63, 0.3);
-            display: flex; justify-content: space-between; align-items: center; padding: 0 6%; position: relative; z-index: 20;
+            display: flex; justify-content: space-between; align-items: center; padding: 0 8%; position: relative; z-index: 20;
         }
-        footer h3 { font-family: 'Cinzel', serif; font-size: 0.6rem; letter-spacing: 2px; color: var(--gold); }
-        footer p { font-size: 0.6rem; color: #888; }
-        .footer-social-icons { display: flex; gap: 12px; }
-        .socialContainer { width: 35px; height: 35px; border: 1px solid var(--gold); border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: 0.3s; text-decoration: none; }
-        .socialContainer:hover { background: var(--gold); transform: scale(1.1); }
-        .socialSvg { width: 16px; fill: var(--gold); transition: 0.3s; }
-        .socialContainer:hover .socialSvg { fill: #000; }
+        footer h3 {
+            font-family: 'Playfair Display', serif;
+            font-size: 0.6rem;
+            letter-spacing: 2px;
+            color: var(--gold);
+        }
         /* ============================= */
 /* ===== RESPONSIVE TAMAKO ===== */
 /* ============================= */
@@ -267,10 +378,10 @@
 <div class="frame"></div>
 
 <nav>
-    <div class="logo">TAMAKO</div>
+    <div class="logo">✦ TAMAKU</div>
     <div class="nav-links">
     <a href="index.html">Inicio</a>
-    <a href="servicios.html">Servicios</a>
+    <a href="servicios.html" class="active">Servicios</a>
     <a href="index.html?login=true" class="btn-login">Iniciar sesión</a>
 </div>
 </nav>
@@ -345,7 +456,7 @@
             <p>9:00 AM - 8:00 PM</p>
         </div>
     </div>
-    <p style="opacity: 0.4; letter-spacing: 3px;">TAMAKO &copy; 2026</p>
+    <p style="opacity: 0.4; letter-spacing: 3px;">TAMAKU &copy; 2026</p>
     <div class="footer-social-icons">
         <a href="#" class="socialContainer"><svg viewBox="0 0 448 512" class="socialSvg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8z"/></svg></a>
         <a href="#" class="socialContainer"><svg viewBox="0 0 320 512" class="socialSvg"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"/></svg></a>
@@ -370,7 +481,9 @@
 
         <div id="successMessage" style="display: none; text-align: center; padding: 20px 0;">
             <div style="font-size: 3rem; color: var(--gold); margin-bottom: 15px;">✓</div>
-            <h3 style="font-family: 'Cinzel', serif; color: #fff; letter-spacing: 2px;">¡SOLICITUD RECIBIDA!</h3>
+            <h3 style="font-family: 'Playfair Display', serif; color: #fff; letter-spacing: 2px;">
+                ¡SOLICITUD RECIBIDA!
+            </h3>
             <p style="font-size: 0.8rem; color: #ccc;">Un asesor se pondrá en contacto contigo.</p>
         </div>
     </div>
